Edited chatroom components and messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,11 @@ html, body {
   small {
     font-size: 14px;
   }
+  a {
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
 
 // .container {
