--- a/app/assets/stylesheets/components/_community_card.scss
+++ b/app/assets/stylesheets/components/_community_card.scss
@@ -2,16 +2,6 @@
   width: 80%;
 }
 
-// .community-header {
-//   margin: 8px auto;
-//   width: 200px;
-//   color: black;
-//   border: 1px solid black;
-//   background-color: rgba(250, 250, 250, 0.9);
-//   padding: 4px;
-//   border-radius: 8px;
-// }
-
 .community-header {
   margin: 8px auto;
   width: 200px;
@@ -41,5 +31,6 @@
 .owner-tag {
   justify-self: end;
   margin-left: 64px;
-  color: darkgreen;
+  color: $dark-green;
 }
+
