--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container chat-container my-3">
-  <div class="chat-header-container d-flex justify-content-between">
+  <div class="chat-header-container d-flex justify-content-between align-items-center">
     <div class="community-info">
       <h4>#<%= @community.name %></h4>
-      <div class="community-users-info d-flex justify-content-start align-items-center">
+      <div class="community-users-info d-flex justify-content-start align-items-center me-2">
         <i class="fas fa-users"></i>
-        <i class="me-2"><%= @community.users.count %></i>
+        <small class="me-2"><%= @community.users.count %></small>
       </div>
     </div>
     <% if @community.owner == current_user %>
@@ -12,8 +12,8 @@
         <i class="fas fa-edit align-items-stretch"></i>
       <% end %>
     <% else %>
-      <%= link_to community_member_path(@community), method: :delete do %>
-        <i class="fas fa-sign-out-alt align-items-stretch"></i>
+      <%= link_to community_member_path(@community), method: :delete, data: { confirm: 'Exit this community?' } do %>
+        <i class="fas fa-user-slash align-items-stretch"></i>
       <% end %>
     <% end %>
   </div>
