Added margin to Back btn

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -28,6 +28,6 @@
     <% end %>
   </div>
 </div>
-<%= link_to 'Go back', communities_path, class: 'btn btn-back'  %>
+<%= link_to 'Go back', communities_path, class: 'btn btn-back mb-2' %>
 
 
