removed refresh of page when writing a new message in chat

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -23,7 +23,7 @@
         <%= render "messages/message", message: message %>
       <% end %>
     </div>
-    <%= simple_form_for [ @community, @message ], remote: true do |f| %>
+    <%= simple_form_for([ @community, @message ], remote: true) do |f| %>
       <%= f.input :content, label: false, placeholder: "Message ##{@community.name}", input_html: { class: "send-message" }  %>
     <% end %>
   </div>
