--- a/app/assets/stylesheets/components/_community_card.scss
+++ b/app/assets/stylesheets/components/_community_card.scss
@@ -10,10 +10,10 @@
 
 .community-card {
   width: 100%;
-  background-color: $light-gray;
+  background-color: rgba(211,211,211,1);
   border-radius: 8px;
   h5 {
-    color: $dark-gray;
+    color: $dark-green;
   }
   a {
     color: $dark-gray;
