--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="community-form-container">
+f<div class="community-form-container">
   <%= render "form", community: @community %>
   <%= link_to 'Go back', communities_path, class: 'btn btn-primary btn-back' %>
   <%= link_to 'Delete', community_path(@community), method: :delete, data: { confirm: 'Delete this community?' }, class: 'btn btn-primary btn-delete-community' %>
