--- a/app/assets/stylesheets/components/_community_form.scss
+++ b/app/assets/stylesheets/components/_community_form.scss
@@ -1,16 +1,16 @@
 .community-form-container {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   border-radius: 8px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(211,211,211,0.4);
   padding: 32px;
 }
 
 .community-name-input {
   text-align: center;
-  font-style: italic;
   font-size: 24px;
   height: 40px !important;
+  color: $dark-gray
 }
 
 .community-user-input {
@@ -20,7 +20,7 @@
 
 .add-user-icon {
   font-size: 24px;
-  color: white;
+  color: $light-gray;
 }
 
 .delete-user-icon {
