--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -1,5 +1,18 @@
 f<div class="community-form-container">
-  <%= render "form", community: @community %>
+  <%= simple_form_for(@community, html: { class: "community-form"}) do |f| %>
+    <%= f.input :name, label: false, placeholder: "Community name", input_html: { class: "community-name-input" } %>
+    <div id="community_requests">
+      <%= f.simple_fields_for :community_requests do |fa| %>
+        <%= render 'community_request_fields', f: fa %>
+      <% end %>
+      <div class="link">
+        <%= link_to_add_association f, :community_requests do %>
+          <i class="fas fa-user-plus add-user-icon"></i>
+        <% end %>
+      </div>
+    </div>
+    <%= f.button :submit, class:'btn button-sm my-4 btn-create-community' %>
+  <% end %>
   <%= link_to 'Go back', communities_path, class: 'btn btn-primary btn-back' %>
   <%= link_to 'Delete', community_path(@community), method: :delete, data: { confirm: 'Delete this community?' }, class: 'btn btn-primary btn-delete-community' %>
 </div>
