Change mood on menu to be more of a back button, override avatar sizing to make it uniform

--- a/app/assets/stylesheets/components/_card_entry.scss
+++ b/app/assets/stylesheets/components/_card_entry.scss
@@ -43,10 +43,16 @@
   align-items: center;
 }
 
-.fa-share, .fa-edit {
+.fa-share {
   font-size: 18px;
   color: $dark-green;
 }
+
+.fa-edit > i {
+  font-size: 18px;
+  color: $dark-green;
+}
+
 
 .container-editor {
   width: 90vw;
