--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -70,6 +70,24 @@
   }
 }
 
+
+.button-sq-mood {
+  font-size: 26px;
+  background-color: $light-gray;
+  // padding: 24px 24px;
+  width: 112px;
+  height: 64px;
+  text-align: center; line-height: 64px;
+  color: $dark-green;
+  border-radius: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  border: 3px solid $light-gray;
+  position: absolute;
+  bottom: 70px;
+  left: -10px;
+}
+
 .btn-back {
   width: 80px;
   border-radius: 8px;
