--- a/app/assets/stylesheets/components/_card_entry_show.scss
+++ b/app/assets/stylesheets/components/_card_entry_show.scss
@@ -6,7 +6,7 @@
 
 .card_entry_show {
   background-color: $light-gray;
-  width: 100%;
+  width: 90vw;
   padding: 12px 16px;
   margin: 16px auto;
   // text-overflow: hidden;
