--- a/app/assets/stylesheets/components/_doodle.scss
+++ b/app/assets/stylesheets/components/_doodle.scss
@@ -16,10 +16,10 @@
 
 #doodle-options {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-content: center;
   margin: 0 auto;
-  width: 375px;
+  width: 90vw;
 }
 
 #colors-canvas {
