--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -24,23 +24,25 @@
     <%= link_to communities_path, class: 'button-sq' do %>
       <i class="fas fa-users"></i>
     <% end %>
-    <%= link_to root_path, class: 'button-sq' do %>
+    <!-- Mood button -->
+    <%= link_to root_path, class: 'button-sq-mood' do %>
+      <i class="fas fa-chevron-left emoji-button"></i>
       <% if @mood == "1"%>
-      <i class="fas fa-meh emoji"></i>
+      <i class="fas fa-meh emoji-button"></i>
       <% elsif @mood == "2" %>
-        <i class="fas fa-smile emoji"></i>
+        <i class="fas fa-smile emoji-button"></i>
       <% elsif @mood == "3" %>
-        <i class="fas fa-angry emoji"></i>
+        <i class="fas fa-angry emoji-button"></i>
       <% elsif @mood == "4" %>
-        <i class="fas fa-frown emoji"></i>
+        <i class="fas fa-frown emoji-button"></i>
       <% elsif @mood == "5" %>
-        <i class="fas fa-sad-tear emoji"></i>
+        <i class="fas fa-sad-tear emoji-button"></i>
       <% elsif @mood == "6" %>
-        <i class="fas fa-tired emoji"></i>
+        <i class="fas fa-tired emoji-button"></i>
       <% elsif @mood == '' %>
-        <i class="fas fa-meh-blank"></i>
+        <i class="fas fa-meh-blank emoji-button"></i>
       <% end %>
-
+      </h4>
     <% end %>
   </div>
 </div>
