--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,4 +1,4 @@
 <div class="community-form-container">
   <%= render "form", community: @community %>
-  <%= link_to 'Go back', communities_path, class: 'btn btn-primary btn-back' %>
+  <%= link_to 'Back', communities_path, class: 'btn btn-primary btn-back' %>
 </div>
