--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -33,7 +33,7 @@
       <%= simple_form_for [ @community, @message ], remote: true do |f| %>
         <%= f.input :content, label: false, placeholder: "Message ##{@community.name}", input_html: { class: "send-message" }  %>
         <div class="d-flex justify-content-between align-items-center">
-          <%= link_to 'Go back', communities_path, class: 'btn button-sm' %>
+          <%= link_to 'Back', communities_path, class: 'btn button-sm' %>
           <%= f.button :submit, "Send", class: "btn button-sm" %>
         </div>
       <% end %>
