changed css files so that we can use different styles for the edit btn depending on the page

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -39,9 +39,9 @@
   }
 }
 
-.fa-edit {
-  color: white !important;
-  font-size: 24px !important;
+.chat-header-container .fa-edit {
+  color: white;
+  font-size: 24px;
 }
 
 .fa-user-slash {
