--- a/app/assets/stylesheets/components/_card_entry.scss
+++ b/app/assets/stylesheets/components/_card_entry.scss
@@ -43,7 +43,7 @@
   align-items: center;
 }
 
-.fa-share, .fa-edit {
+.fa-share, .entry-footer .fa-edit {
   font-size: 18px;
   color: $dark-green;
 }
