--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -2,9 +2,9 @@
   <div class="container-editor">
     <%= simple_form_for(@entry) do |f| %>
       <%= f.input :content, as: :rich_text_area, placeholder: "Take a few deep breaths and consider the positive things that are happening today.", label: false %>
-      <div class="buttons">
-        <%= link_to 'Back', menu_path, class: 'btn mx-3 button-sm' %>
-        <%= f.button :submit, "Post", class: 'btn mx-3 button-sm'  %>
+      <div class="buttons d-flex justify-content-between">
+        <%= link_to 'Back', menu_path, class: 'btn button-sm' %>
+        <%= f.button :submit, "Post", class: 'btn button-sm'  %>
       </div>
     <% end %>
   </div>
