--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -33,8 +33,8 @@
         <% end %>
       </div>
   </div>
-  <div class="buttons d-flex justify-content-center">
-    <%= link_to 'Back', entries_path, class: 'btn button-sm mx-3' %>
-    <%= link_to 'Home', root_path, class: 'btn button-sm mx-3'  %>
+  <div class="buttons d-flex justify-content-between">
+    <%= link_to 'Back', entries_path, class: 'btn button-sm' %>
+    <%= link_to 'Home', root_path, class: 'btn button-sm'  %>
   </div>
 </div>
