--- a/app/views/guided/entries/new.html.erb
+++ b/app/views/guided/entries/new.html.erb
@@ -7,8 +7,10 @@
           <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[0].id } %>
         <% end %>
         <br>
-        <%= link_to "Back", menu_path, class: "btn button-sm mx-3"  %>
-        <div id="next-1" class="btn button-sm mx-3 js-btn-next">Next</div>
+        <div class="buttons d-flex justify-content-between">
+          <%= link_to "Back", menu_path, class: "btn button-sm"  %>
+          <div id="next-1" class="btn button-sm js-btn-next">Next</div>
+        </div>
         <br>
         <br>
         <i class="fas fa-circle"></i>
@@ -21,8 +23,10 @@
           <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[1].id } %>
         <% end %>
         <br>
-        <div id="back-2" class="btn button-sm mx-3 js-btn-prev">Back</div>
-        <div id="next-2" class="btn button-sm mx-3 js-btn-next">Next</div>
+        <div class="buttons d-flex justify-content-between">
+          <div id="back-2" class="btn button-sm js-btn-prev">Back</div>
+          <div id="next-2" class="btn button-sm js-btn-next">Next</div>
+        </div>
         <br>
         <br>
         <i class="far fa-circle"></i>
@@ -35,8 +39,10 @@
           <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[2].id } %>
         <% end %>
         <br>
-        <div id="back-3" class="btn button-sm mx-3 js-btn-prev">Back</div>
-        <%= f.button :submit, "Next", class: "btn button-sm mx-3" %>
+        <div class="buttons d-flex justify-content-between">
+          <div id="back-3" class="btn button-sm js-btn-prev">Back</div>
+          <%= f.button :submit, "Next", class: "btn button-sm" %>
+        </div>
         <br>
         <br>
         <i class="far fa-circle"></i>
