added back css that got removed by mistake

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -37,10 +37,9 @@
 }
 
 
-.fa-edit {
-  color: white !important;
-  font-size: 20px !important;
-
+.chat-header-container .fa-edit {
+  color: white;
+  font-size: 20px;
 }
 
 .fa-user-slash {
