--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -5,6 +5,11 @@
       <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
     </i>
     <p><%= message.content %></p>
+    <% if message.user == current_user %>
+      <%= link_to message_path(message), method: :delete, data: { confirm: 'Delete this message?' } do %>
+        <i class="fas fa-times delete-user-icon"></i>
+      <% end %>
+    <% end %>
   </div>
 <% elsif message.actiontext_content %>
   <div class="message-container action-text-message" id="message-<%= message.id %>">
