--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -29,7 +29,7 @@
           </div>
         </div>
         <%= link_to edit_entry_path(@entry) do %>
-          <small><i class="fas fa-edit"></i></small>
+          <i class="fas fa-edit"></i>
         <% end %>
       </div>
   </div>
