changed My Entries to My Journal

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-entries">
-  <h1>My Entries</h1>
+  <h1>My Journal</h1>
   <% @entries.reverse.each do |entry| %>
     <div class="card_entry">
       <%= link_to entry_path(entry) do %>
