--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -13,10 +13,10 @@
   <div class="menu_icon_container">
     <%= link_to new_guided_entry_path, class: 'button-sq' do %>
       <i class="fas fa-map-signs"></i>
-      <!-- <i class="fas fa-compass"></i> -->
+      <p style="color: white !important;">Guided Entry</p>
     <% end %>
     <%= link_to new_entry_path, class: 'button-sq' do %>
-      <i class="fas fa-plus-square"></i>
+        <i class="fas fa-plus-square"></i>
     <% end %>
     <%= link_to doodle_path, class: 'button-sq' do %>
       <i class="fas fa-paint-brush"></i>
