--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -44,18 +44,16 @@
   cursor: pointer;
 }
 
-
-
-
 .button-sq {
   display: flex;
   flex-direction: column;
+  justify-content:center;
   font-size: 52px;
   background-color: $dark-green;
   // padding: 24px 24px;
   width: 112px;
   height: 112px;
-  text-align: center; line-height: 112px;
+  text-align: center;
   color: $light-gray;
   border-radius: 8px;
   margin-top: 8px;
@@ -69,6 +67,13 @@
     text-decoration: none;
     border: 3px solid $dark-green;
     background-color: transparent;
+  }
+  p {
+    color: $light-gray;
+    padding: 0;
+    padding-top: 4px;
+    font-size: 14px;
+    margin: 0;
   }
 }
 
