--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -21,7 +21,7 @@
     <% end %>
     <%= link_to doodle_path, class: 'button-sq' do %>
       <i class="fas fa-paint-brush"></i>
-      <p>Drawing</p>
+      <p>Doodle</p>
     <% end %>
     <%= link_to communities_path, class: 'button-sq' do %>
       <i class="fas fa-users"></i>
