improved seeds file with more users, communities and messages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <!-- Greeting -->
-  <h1 class="my-4">Hello, <%= @user.nickname %>.</h1>
+  <h1 class="my-4">Hello, <%= @user.nickname.capitalize %>.</h1>
   <h5 class="my-5">How are you feeling today?</h5>
 
   <!-- Emojis -->
