--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -7,9 +7,9 @@
       <% elsif @entry.mood == 2 %>
         <i class="fas fa-smile emoji emoji-entry"></i>
       <% elsif @entry.mood == 3 %>
-        <i class="fas fa-angry emoji emoji-entry"></i>
+        <i class="fas fa-grin-beam emoji emoji-entry"></i>
       <% elsif @entry.mood == 4 %>
-        <i class="fas fa-frown emoji emoji-entry"></i>
+        <i class="fas fa-angry emoji emoji-entry"></i>
       <% elsif @entry.mood == 5 %>
         <i class="fas fa-sad-tear emoji emoji-entry"></i>
       <% elsif @entry.mood == 6 %>
