--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,8 +9,8 @@
     <%= simple_form_for @entry, url: menu_mood_path do |f| %>
       <%= f.input :mood, as: :radio_buttons,
       collection: [[1, '<i class="fas fa-meh emoji"></i>'.html_safe],
-      [2, '<i class="fas fa-smile emoji"></i>'.html_safe], [3, '<i class="fas fa-angry emoji"></i>'.html_safe],
-      [4, '<i class="fas fa-frown emoji"></i>'.html_safe], [5, '<i class="fas fa-sad-tear emoji"></i>'.html_safe],
+      [2, '<i class="fas fa-smile emoji"></i>'.html_safe], [3, '<i class="fas fa-grin-beam emoji"></i>'.html_safe],
+      [4, '<i class="fas fa-angry emoji"></i>'.html_safe], [5, '<i class="fas fa-sad-tear emoji"></i>'.html_safe],
       [6, '<i class="fas fa-tired emoji"></i>'.html_safe]], label_method: :second, value_method: :first, input_html: { class: "tag-selector" },
                   item_wrapper_class: 'tag-item' %>
       <%= f.button :submit, "Confirm", class: "button-lg my-5" %>
