--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -35,9 +35,9 @@
       <% elsif @mood == "2" %>
         <i class="fas fa-smile emoji-button"></i>
       <% elsif @mood == "3" %>
-        <i class="fas fa-angry emoji-button"></i>
+        <i class="fas fa-grin-beam emoji-button"></i>
       <% elsif @mood == "4" %>
-        <i class="fas fa-frown emoji-button"></i>
+        <i class="fas fa-angry emoji-button"></i>
       <% elsif @mood == "5" %>
         <i class="fas fa-sad-tear emoji-button"></i>
       <% elsif @mood == "6" %>
