Added broadcast feature to the share entries and added some padding to the user count

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -53,6 +53,11 @@
   }
 }
 
+.community-users-info {
+  small {
+    padding-left: 4px;
+  }
+}
 .chatroom-footer {
   position: fixed;
   bottom: 0px;
