--- a/app/assets/stylesheets/components/_actiontext.scss
+++ b/app/assets/stylesheets/components/_actiontext.scss
@@ -91,3 +91,11 @@ trix-editor.form-control {
 .link_to_embed {
   color: $dark-gray;
 }
+
+.attachment {
+  max-width: 100%;
+  // iframe {
+  //   max-width: 100%;
+  // }
+}
+
