--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -17,7 +17,6 @@
       <% end %>
     <% end %>
   </div>
-
   <!-- MESSAGES -->
   <div class="chat">
     <div id="messages" data-community-id="<%= @community.id %>">
@@ -25,11 +24,10 @@
         <%= render "messages/message", message: message %>
       <% end %>
     </div>
-
     <!-- SEND MESSAGE -->
     <div class="chatroom-footer">
       <%= simple_form_for [ @community, @message ], remote: true do |f| %>
-        <%= f.input :content, label: false, placeholder: "Message ##{@community.name}", input_html: { class: "send-message" }  %>
+        <%= f.input :content, label: false, placeholder: "Message ##{@community.name}", input_html: { class: "send-message", autocomplete: "off" }  %>
         <div class="d-flex justify-content-between align-items-center">
           <%= link_to 'Back', communities_path, class: 'btn button-sm' %>
           <%= f.button :submit, "Send", class: "btn button-sm" %>
