--- a/app/views/youtubes/_youtube.html.erb
+++ b/app/views/youtubes/_youtube.html.erb
@@ -1,3 +1,3 @@
 <div id="youtube-container">
-  <iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/<%= youtube.id %>"></iframe>
+  <iframe id="ytplayer" class="attachment" type="text/html" src="https://www.youtube.com/embed/<%= youtube.id %>"></iframe>
 </div>
