--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <%= favicon_link_tag %>
     <style>
-      .user-<%= current_user.id %> {
+      .user-<%= current_user&.id %> {
         background-color: rgba(63,110,67,0.3);
         text-align: right;
         margin-right: 0;
