Last seeds adjustment + lighter green

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,7 +10,7 @@ $gray: #0E0000;
 
 // Cutivate colors:
 $light-green: #C6DEC2;
-$dark-green: #3F6E43;
+$dark-green: #528755;
 $light-gray:#EDEDED;
 $dark-gray: #25282B;
 $white: #FFFFFF
